# tauri-music

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: index.ts
src/components/: Albumlist.vue  Artistcard.vue  Content.vue  Footer.vue  Header.vue  PhoneLogin.vue  Play.vue  Playlists.vue  QrLogin.vue  Songlist.vue  Tabs.vue
src/router/: index.ts
src/stores/: index.ts
src/view/: artist.vue  detaillist.vue  download.vue  lastplayed.vue  localmusic.vue  musicplay.vue  mycollection.vue  mylike.vue  recommend.vue  searchmusic.vue
