[package]
name = "skymusic"
version = "1.0.0"
description = "skymusic"
authors = ["angelbests1314@live.com"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all", "devtools", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
download_rs = {version="0.2.0",features= ["sync_download"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
